# rustymonad

./: LICENSE  README.md  README_zh.md  pyproject.toml
src/rustymonad/: __init__.py  maybe.py  monad.py  option.py  result.py  utils.py
tests/: __init__.py  run.py  test_monad.py  test_option.py  test_result.py  test_utils.py
