[project]
name = "RustyMonad"
version = "0.0.1"
authors = ["AkiSun"]
description = "Rust-style Monad utils for Python"
repository = "https://github.com/AkiSun/rustymonad"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AkiSun/rustymonad"
Issues = "https://github.com/AkiSun/rustymonad/issues"