[project]
name = "RustyMonad"
version = "0.0.1"
authors = [
    { name="AkiSun" }
]
description = "Rust-style Monad utils for Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
keywords = ["monad", "functional"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AkiSun/rustymonad"
Issues = "https://github.com/AkiSun/rustymonad/issues"