[project]
name = "RustyMonad"
version = "0.1.0"
authors = [
    { name="AkiSun" }
]
description = "Rust-style Monad utils for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
keywords = ["monad", "functional"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AkiSun/rustymonad"
Issues = "https://github.com/AkiSun/rustymonad/issues"